kubernetes/minikube/e2e-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: e2e
spec:
  replicas: 2
  selector:
    matchLabels:
      app: e2e
  template:
    metadata:
      labels:
        app: e2e
    spec:
      containers:
        - name: http-echo
          image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
          ports:
            - containerPort: 8080
