kubernetes/minikube/e2e-service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: e2e-svc-node-port
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30033
      protocol: TCP
      name: http
  selector:
    app: e2e
