kubernetes/minikube/e2e-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e2e-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: e2e
