kubernetes/minikube/e2e-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: e2e-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
    - http:
        paths:
          - path: /e2e-test
            backend:
              serviceName: e2e-svc
              servicePort: 80
